# book-storage

./: .gitignore  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_email.py  0004_alter_customuser_email.py  0005_profile.py  0006_alter_profile_gender.py  0007_delete_profile.py  0008_alter_customuser_email.py  0009_alter_customuser_email.py  0010_alter_customuser_email.py  0011_customuser_slug.py  0012_alter_customuser_options.py  0013_alter_customuser_options.py
api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
book/: admin.py  forms.py  mixins.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
book/migrations/: 0001_initial.py  0002_book_cover_book_pdf.py  0002_remove_book_genre_book_topics_alter_book_language_and_more.py  0003_alter_book_pdf.py  0004_alter_book_slug.py  0005_alter_book_topics.py  0006_alter_book_content_alter_book_pdf.py  0007_alter_book_total_pages.py  0008_alter_book_total_pages.py  0009_rename_text_commentbook_comment.py  0010_alter_book_isbn.py  0011_author_slug.py  0012_alter_author_slug.py  0013_alter_book_slug.py
common/: utils.py
config/: settings.py  urls.py
static/css/: styles.css
static/js/: edit_profile.js
templates/: _base.html  base.html  footer.html  header.html
templates/account/: login.html  logout.html  signup.html
templates/base/: footer.html  header.html  messages.html  (+1 more)
user_profile/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
(+20 files in other folders)
